Add separate city map pages (Santorini, Maldives, Paris, Patagonia, Shanghai, Argentina) with images and styles

--- a/frost.html
+++ b/frost.html
@@ -53,7 +53,7 @@
     <div class="destination-grid">
       <!-- Europe -->
       <div class="destination-card" data-family="family" data-continent="europe" data-type="relaxing">
-        <img src="Screenshot 2025-08-05 200419.png" alt="Lapland, Sweden" />
+        <img src="images/cityscape-sunrise-portland-panorama-city-lights-3840x2160-23.jpg" alt="Lapland, Sweden" />
         <h3>Lapland, Sweden</h3>
       </div>
       <div class="destination-card" data-family="adult" data-continent="europe" data-type="adventurous">
