update: modified argentina, frost, hot-biome, jungle, maldives, paris, santorini, shanghai, test-explore and tides pages

--- a/argentina.html
+++ b/argentina.html
@@ -16,8 +16,8 @@
   </div>
   <nav class="nav-links">
     <a href="index.html">Home</a>
-    <a href="explore.html">Explore</a>
-    <a href="contact.html">Contact</a>
+    <a href="test-explore.html">Explore</a>
+    <a href="mailto:info@elementavoyages.com">Contact</a>
   </nav>
 </header>
 
