--- a/shanghai.html
+++ b/shanghai.html
@@ -16,8 +16,8 @@
   </div>
   <nav class="nav-links">
     <a href="index.html">Home</a>
-    <a href="explore.html">Explore</a>
-    <a href="contact.html">Contact</a>
+    <a href="test-explore.html">Explore</a>
+    <a href="mailto:info@elementavoyages.com">Contact</a>
   </nav>
 </header>
 
