--- a/test-explore.html
+++ b/test-explore.html
@@ -23,8 +23,8 @@
     </div>
     <nav class="nav-links">
       <a href="index.html">Home</a>
-      <a href="explore.html">Explore</a>
-      <a href="contact.html">Contact</a>
+      <a href="">Explore</a>
+      <a href="mailto:info@elementavoyages.com">Contact</a>
     </nav>
   </header>
 
