--- a/index.html
+++ b/index.html
@@ -12,17 +12,27 @@
 
   <!-- Background Slides (leave CSS out of here) -->
   <div class="bg-slides">
-    <div class="bg-slide active" style="background-image: url('images/0ne-front.jpg');"></div>
-    <div class="bg-slide" style="background-image: url('images/banff-national-park-3840x2160-12366.jpg');"></div>
-    <div class="bg-slide" style="background-image: url('images/cityscape-sunrise-portland-panorama-city-lights-3840x2160-23.jpg');"></div>
-    <div class="bg-slide" style="background-image: url('images/macaw-birds-couple-colorful-jungle-love-birds-tropical-3840x2160-7464.jpg');"></div>
-    <div class="bg-slide" style="background-image: url('images/kihaadhuffaru-island-maldives-water-villa-wooden-pier-3840x2160-3884.jpg');"></div>
-    <div class="bg-slide" style="background-image: url('images/lake-louise-winter-3840x2160-19913.jpg');"></div>
-    <div class="bg-slide" style="background-image: url('images/rainbow-bridge-3840x2160-9723.jpg');"></div>
-    <div class="bg-slide" style="background-image: url('images/mount-rundle-nightscape-banff-national-park-reflections-3840x2160-28.jpg');"></div>
-    <div class="bg-slide" style="background-image: url('images/peacock-green-grass-beautiful-green-feathers-bird-trees-3840x2160-2147.jpg');"></div>
-    <div class="bg-slide" style="background-image: url('images/nanpu-bridge-modern-architecture-cityscape-shanghai-city-3840x2160-18.jpg');"></div>
+    <div class="bg-slide active" style="background-image: url('front-page-image/manhattan-new-york-city-manhattan-bridge-cityscape-sunset-3840x2160-1346.jpg');"></div>
+    <div class="bg-slide" style="background-image: url('front-page-image/macaw-birds-couple-colorful-jungle-love-birds-tropical-3840x2160-7464.jpg');"></div>
+    <div class="bg-slide" style="background-image: url('front-page-image/0ne-front.jpg');"></div>
+    <div class="bg-slide" style="background-image: url('front-page-image/banff-national-park-3840x2160-12366.jpg');"></div>
+    <div class="bg-slide" style="background-image: url('front-page-image/cityscape-sunrise-portland-panorama-city-lights-3840x2160-23.jpg');"></div>
+    <div class="bg-slide" style="background-image: url('front-page-image/kihaadhuffaru-island-maldives-water-villa-wooden-pier-3840x2160-3884.jpg');"></div>
+    <div class="bg-slide" style="background-image: url('front-page-image/lake-louise-winter-3840x2160-19913.jpg');"></div>
+    <div class="bg-slide" style="background-image: url('front-page-image/mount-rundle-nightscape-banff-national-park-reflections-3840x2160-28.jpg');"></div>
+    <div class="bg-slide" style="background-image: url('front-page-image/peacock-green-grass-beautiful-green-feathers-bird-trees-3840x2160-2147.jpg');"></div>
+    <div class="bg-slide" style="background-image: url('front-page-image/nanpu-bridge-modern-architecture-cityscape-shanghai-city-3840x2160-18.jpg');"></div>
   </div>
+ <header class="top-header">
+  <div class="logo-container">
+    <a href="#holidays"><img src="Screenshot_2025-07-09_at_21.32.05-removebg-preview.png" alt="Logo" /></a>
+  </div>
+  <nav class="nav-links">
+    <a href="mailto:info@elementavoyages.com">Contact</a>
+    
+
+  </nav>
+</header>
 
   <!-- Hero (unchanged structure) -->
   <div class="hero">
@@ -135,7 +145,7 @@
 
 
 
-<section class="featured-holidays">
+<section class="featured-holidays" id="holidays">
   <h2>Travelers’ Favourite Holidays</h2>
   <div class="holidays-rotator">
     <div class="holiday-card">
@@ -188,7 +198,7 @@
     <h2>Your Dream is Just One Click Away</h2>
     <p>Explore curated biomes and luxury escapes designed for you.</p>
     <div class="biome-buttons">
-      <a href="frost.html" class="biome-btn">Desert</a>
+      <a href="desert.html" class="biome-btn">Desert</a>
       <a href="frost.html" class="biome-btn">Forest</a>
       <a href="jungle.html" class="biome-btn">Mountain</a>
       <a href="tides.html" class="biome-btn">Beach</a>
